[package]
name = "message-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
libc = "0.2.137"
once_cell = "1.16.0"
slotmap = "1.0.6"

[dev-dependencies]
serial_test = "0.9.0"

[build-dependencies]
cbindgen = "0.24.3"
