[package]
name = "objc-runtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "objc_rs"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bitflags = "1.3.2"
libc = "0.2.137"
memoffset = "0.8.0"
pow_of_2 = "0.1.2"
slotmap = "1.0.6"

[dev-dependencies]
serial_test = "0.9.0"

[build-dependencies]
cbindgen = "0.24.3"
